# KRTMI_POLINEMA

rotema/: CMakeLists.txt  package.xml
rotema/arduino/MainLowControl/: MainLowControl.ino  encoder.h  imu.h
rotema/launch/: rotema.launch
rotema/scripts/: detectObject.py
rotema/src/: RobotNavigation.cpp  RobotPosition.cpp  RobotVelocityCommand.cpp  forward.cpp
