<?xml version="1.0"?>
<package format="2">
  <name>rotema</name>
  <version>0.0.1</version>
  <description>Package untuk node forwardNode</description>

  <!-- Maintainer informasi -->
  <maintainer email="your_email@example.com">Your Name</maintainer>

  <!-- Lisensi -->
  <license>MIT</license>

  <!-- Dependensi build dan run-time -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- Dependensi opsional -->
  <build_depend>roslint</build_depend>
  <exec_depend>roslint</exec_depend>

  <!-- URL opsional -->
  <url type="website">http://wiki.ros.org/rotema</url>
</package>
